# chirpe-variant

./: .gitignore  AGENTS.md  README.md  STRING_IN_ONNX_PROJECT_CHECKLIST.md  pyproject.toml
configs/: bert_config.yaml  phi3_onnx_config.yaml  string_onnx_quick_bert.yaml  string_onnx_quick_clinicalbert.yaml  string_onnx_quick_mentalbert.yaml  ultra_quick_config.yaml
docs/: string_in_onnx_artifact_spec.md  string_in_onnx_blocker_resolution.md  string_in_onnx_perf_reliability_report.md  string_in_onnx_runbook.md  string_in_onnx_scope_lock.md  triton_ort_extensions_smoketest_report.md  version_compatibility_matrix.md
notebooks/: 01_quickstart.ipynb  02_build_onnx_version.ipynb  02_convert_onnx_tutorial.ipynb  02_triton_onnx_pipeline.ipynb  03_pytorch_vs_onnx.ipynb  03_quickstart_fused_onnx.ipynb  04_readyai_segmented_inference_contract.ipynb  05_readyai_onnx_summarization_inference.ipynb  05_transcript_voting_onnx_tutorial.ipynb  06_fused_string_onnx_transcript_voting_tutorial.ipynb  06_readyai_smollm2_summarization_inference.ipynb
reports/baseline/: bert.json  clinicalbert.json  mentalbert.json
reports/fused_smoke/: bert.json  clinicalbert.json  mentalbert.json
reports/fused_voting_smoke/: bert.json  clinicalbert.json  mentalbert.json
reports/parity_fused/: bert.json  clinicalbert.json  mentalbert.json  summary.json
reports/perf/: bert.json  clinicalbert.json  mentalbert.json
reports/perf_fused/: bert.json  clinicalbert.json  mentalbert.json
reports/robustness_fused/: summary.json
reports/tokenizer_spike/: bert.json  clinicalbert.json  mentalbert.json
reports/triton_fused_integration/: summary.json
scripts/: export_triton_onnx.py  inference.py  train_from_config.py  verify_onnx_parity.py
scripts/dataprep/: generate_synthetic_data.py
scripts/experiments/: phi3_hallucination_probe.py  phi3_onnx_summarization_latency.py  phi3_onnx_test.py  tokenizer_onnx_feasibility_spike.py  tokenizer_parity_check.py
scripts/onnx/: add_transcript_voting_onnx.py  build_fused_string_onnx.py  build_fused_string_voting_onnx.py  export_triton_onnx.py
scripts/train/: train_from_config.py
scripts/validation/: benchmark_triton_classifier_baseline.py  benchmark_triton_fused.py  integrate_fused_triton_models.py  robustness_fused_triton.py  smoke_test_triton_ort_extensions.py  verify_fused_triton_parity.py
src/chirpe/: __init__.py  cli.py
src/chirpe/data/: __init__.py  dataset.py  preprocessor.py  segmentation.py  summarizer.py
src/chirpe/explanations/: __init__.py  narrative.py  shap_generator.py
src/chirpe/models/: __init__.py  trainer.py  (+1 more)
tests/: __init__.py  test_classifier.py  test_dataset.py  test_fused_string_voting_helpers.py  test_onnx_transcript_voting.py  test_segmentation.py  test_summarizer.py
(+4 files in other folders)
