[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chirpe"
version = "0.1.0"
description = "Human-centered NLP framework for predicting clinical high-risk for psychosis from interview transcripts, with BERT classification and SHAP explainability."
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = [
    "nlp",
    "clinical-nlp",
    "mental-health",
    "psychiatry",
    "psychosis",
    "clinical-high-risk",
    "explainable-ai",
    "shap",
    "bert",
    "transformers",
    "huggingface",
    "pytorch",
    "transcript-analysis",
    "healthcare-ai",
    "onnx",
]
urls = {Repository = "https://github.com/GuiCamargoX/chirpe-variant"}
authors = [
    {name = "CHiRPE Team", email = "stephanie.fong@unimelb.edu.au"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
    "shap>=0.42.0",
    "scikit-learn>=1.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
    "sentence-transformers>=2.2.0",
    "bert-score>=0.3.13",
    "openai>=1.0.0",
    "anthropic>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
]

[project.scripts]
chirpe-train = "chirpe.cli:train_cli"
chirpe-predict = "chirpe.cli:predict_cli"
chirpe-evaluate = "chirpe.cli:evaluate_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=chirpe --cov-report=term-missing"
